--- a/frontend/src/pages/Message.css
+++ b/frontend/src/pages/Message.css
@@ -4,6 +4,14 @@
     max-width: 63%;
     border-right: 1px solid #ebe7fb;
   }
+
+  .main__chatcontent {
+    flex-grow: 1;
+    padding: 20px 40px;
+    max-width: 100v;
+    border-right: 1px solid #ebe7fb;
+  }
+
   .content__header {
     padding-bottom: 15px;
     border-bottom: 1px solid #ebe7fb;
